# Chess-AI-Engine

./: CMakeLists.txt  README.md  run.sh  setup.sh
docs/: recommendation.md
include/: bit_set.h  board.h  chess.h  eval.h  generator.h  moves.h  pieces.h  search.h  uci.h
src/: bit_set.cpp  board.cpp  eval.cpp  generator.cpp  main.cpp  search.cpp  uci.cpp
src/core/: board.cpp
src/eval/: eval.cpp
src/utils/: bit_set.cpp
